Add environment variable placeholders for API keys in .env

--- a/aurora/.env
+++ b/aurora/.env
@@ -1,3 +1,3 @@
 OPENAI_API_KEY=os.environ.get('OPEN_API_KEY')
-BRAVE_API_KEY=os.environ.get('BRAVE_API_KEY')
-GITHUB_PERSONAL_ACCESS_TOKEN=os.environ.get('GITHUB_PERSONAL_ACCESS_TOKEN')
+BRAVE_API_KEY=os.environ.get('BSAp2bWpsbC4aEaO9eXSw2MgYFjzdsC')
+GITHUB_PERSONAL_ACCESS_TOKEN=os.environ.get('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SS_TOKEN')
